feat main-features 주요기능 상세 pc 추가하다

--- a/main-feature.html
+++ b/main-feature.html
@@ -47,22 +47,24 @@
       </h2>
 
       <section class="features-section">
+        <h3 class="title blind">주요 기능 상세</h3>
+
         <div class="features-grid">
           <div class="feature-card">
-            <h3>신도관리</h3>
+            <h4>신도관리</h4>
             <ul>
               <li>신도 관리</li>
-              <li>신도 등록</li>
-              <li>신도 검색</li>
-              <li>신도증 관리</li>
               <li>그룹 분류</li>
+              <li>신도 등록</li>
               <li>수계 등록</li>
+              <li>신도 검색</li>
               <li>문자 발송</li>
+              <li>신도증 관리</li>
             </ul>
           </div>
 
           <div class="feature-card">
-            <h3>접수관리</h3>
+            <h4>접수관리</h4>
             <ul>
               <li>기도 접수</li>
               <li>제사 접수</li>
@@ -75,7 +77,7 @@
           </div>
 
           <div class="feature-card">
-            <h3>재무 관리</h3>
+            <h4>재무 관리</h4>
             <ul>
               <li>일회계 마감</li>
               <li>예산 등록</li>
@@ -87,7 +89,7 @@
           </div>
 
           <div class="feature-card">
-            <h3>카드관리</h3>
+            <h4>카드관리</h4>
             <ul>
               <li>카드 결제 내역</li>
               <li>카드 결제 취소</li>
@@ -96,7 +98,7 @@
           </div>
 
           <div class="feature-card">
-            <h3>사찰 관리</h3>
+            <h4>사찰 관리</h4>
             <ul>
               <li>사용자 관리</li>
               <li>메뉴 권한 설정</li>
@@ -105,7 +107,17 @@
           </div>
 
           <div class="feature-card">
-            <h3>CMS 관리</h3>
+            <h4>승적 관리</h4>
+            <ul>
+              <li>승적 등록</li>
+              <li>승적 조회</li>
+              <li>그룹 분류</li>
+              <li>문자 발송 / 발송 내역</li>
+            </ul>
+          </div>
+
+          <div class="feature-card">
+            <h4>CMS 관리</h4>
             <ul>
               <li>신규 등록</li>
               <li>출금 현황</li>
