feat 주요기능 상단 영역 mo 추가하다

--- a/main-features.html
+++ b/main-features.html
@@ -69,7 +69,7 @@
               <li>기도 접수</li>
               <li>제사 접수</li>
               <li>원불/봉안</li>
-              <li>기부금 영수증(자동 발급)</li>
+              <li>기부금 영수증<br class="mo-only" />(자동 발급)</li>
               <li>상시 접수</li>
               <li>위패 접수</li>
               <li>후원 접수</li>
