feat 주요기능 mo 수정 완료하다

--- a/main-features.html
+++ b/main-features.html
@@ -129,68 +129,78 @@
       </section>
 
       <section class="benefits-section">
-        <h3 class="benefits-title">아래 컨텐츠 아우를 수 있는 소타이틀</h3>
+        <h3 class="title">아래 컨텐츠 아우를 수 있는 소타이틀</h3>
 
-        <div class="benefits-grid">
+        <ul class="benefits-list">
           <div class="benefit-item">
-            <h4>포교 활성화</h4>
-            <ul>
-              <li>
-                행사 우편물의 SMS 전환으로 신도와의 커뮤니케이션이 빠르고
-                정확해짐
-              </li>
-              <li>
-                종이 우편물의 SMS 전환으로 신도수 1,000세대 기준 연간 3백만원을
-                절약
-              </li>
-              <li>그룹별 SMS 발송 가능, 효율적으로 신도들과 소통 가능</li>
-              <li>
-                예) 인등 축원자 / 대입기도 축원자 등 그룹별로 선택하여 SMS 전송
-                가능
-              </li>
-            </ul>
+            <div class="benefit-grid">
+              <h4>포교 활성화</h4>
+              <ul class="benefit-grid-item">
+                <li>
+                  행사 우편물의 SMS 전환으로 신도와의 커뮤니케이션이 빠르고
+                  정확해짐
+                </li>
+                <li>
+                  종이 우편물의 SMS 전환으로 신도수 1,000세대 기준 연간
+                  3백만원을 절약
+                </li>
+                <li>그룹별 SMS 발송 가능, 효율적으로 신도들과 소통 가능</li>
+                <li>
+                  예) 인등 축원자 / 대입기도 축원자 등 그룹별로 선택하여 SMS
+                  전송 가능
+                </li>
+              </ul>
+            </div>
           </div>
 
           <div class="benefit-item">
-            <h4>사찰 신뢰감 향상</h4>
-            <ul>
-              <li>
-                기도 접수 시 접수완료 문자 발송, 사찰에 대한 신도들의 신뢰도
-                향상
-              </li>
-              <li>기도비 무통장 입금 시 누락으로 인한 수납업무 오류 해소</li>
-              <li>
-                자동 전산화된 종무행정시스템으로 사찰에 대한 신도들의 전반적인
-                신뢰도 향상
-              </li>
-            </ul>
+            <div class="benefit-grid">
+              <h4>사찰 신뢰감 향상</h4>
+              <ul class="benefit-grid-item">
+                <li>
+                  기도 접수 시 접수완료 문자 발송, 사찰에 대한 신도들의 신뢰도
+                  향상
+                </li>
+                <li>기도비 무통장 입금 시 누락으로 인한 수납업무 오류 해소</li>
+                <li>
+                  자동 전산화된 종무행정시스템으로 사찰에 대한 신도들의 전반적인
+                  신뢰도 향상
+                </li>
+              </ul>
+            </div>
           </div>
 
           <div class="benefit-item">
-            <h4>재정의 투명성 극대화</h4>
-            <ul>
-              <li>
-                수기가 아닌 입력 데이터에 의한 자동 전산화 시스템으로 금전 관련
-                누락 및 오류 해소, 사찰 재정 운영 및 관리가 투명해지고 손 쉬어짐
-              </li>
-              <li>
-                지리적 여건, 신도의 개인적 사정 등 기도 및 법회 참가자가 적은
-                사찰들도 정기적인 기도비와 인등비를 자동 출금 이체 서비스에
-                등록하여 사찰의 전반적인 재정 극대화
-              </li>
-            </ul>
+            <div class="benefit-grid">
+              <h4>재정의 투명성 극대화</h4>
+              <ul class="benefit-grid-item">
+                <li>
+                  수기가 아닌 입력 데이터에 의한 자동 전산화 시스템으로 금전
+                  관련 누락 및 오류 해소, 사찰 재정 운영 및 관리가 투명해지고 손
+                  쉬어짐
+                </li>
+                <li>
+                  지리적 여건, 신도의 개인적 사정 등 기도 및 법회 참가자가 적은
+                  사찰들도 정기적인 기도비와 인등비를 자동 출금 이체 서비스에
+                  등록하여 사찰의 전반적인 재정 극대화
+                </li>
+              </ul>
+            </div>
           </div>
 
           <div class="benefit-item">
-            <h4>효율적인 승적관리</h4>
-            <ul>
-              <li>
-                체계적인 승적정보 입력 및 관리로 행정 업무 간소화 및 효율성 증대
-              </li>
-              <li>승적 관리를 위한 다양한 옵션기능 제공</li>
-            </ul>
+            <div class="benefit-grid">
+              <h4>효율적인 승적관리</h4>
+              <ul class="benefit-grid-item">
+                <li>
+                  체계적인 승적정보 입력 및 관리로 행정 업무 간소화 및 효율성
+                  증대
+                </li>
+                <li>승적 관리를 위한 다양한 옵션기능 제공</li>
+              </ul>
+            </div>
           </div>
-        </div>
+        </ul>
       </section>
     </main>
 
