feat : 도입효과 section2 pc 영역 작업 완료하다

--- a/introduction-effect.html
+++ b/introduction-effect.html
@@ -67,13 +67,14 @@
       </section>
 
       <section class="goals-section">
-        <h3 class="section-title">Achieve The Goals</h3>
+        <h3 class="title">Achieve The Goals</h3>
 
         <div class="goals-list">
           <div class="goal-item">
             <div class="goal-content">
-              <h4>행정업무의 '자동화'와 '표준화'</h4>
+              <h4>1</h4>
               <ul>
+                <li>행정업무의 '자동화'와 '표준화'</li>
                 <li>기도비, 인등, 기부금 등 모든 접수와 수납을 자동 처리</li>
                 <li>수기 입력과 중복 기록을 없애고 실수·누락 최소화</li>
                 <li>
@@ -83,14 +84,19 @@
               </ul>
             </div>
             <div class="goal-summary">
-              <span>행정업무의 '자동화'와 '표준화'</span>
+              <span><b>goal</b></span>
+              <span
+                >행정업무의<br class="pc-only" />
+                '자동화'와 '표준화'</span
+              >
             </div>
           </div>
 
           <div class="goal-item">
             <div class="goal-content">
-              <h4>신도 데이터의 정확성과 보안성 확보</h4>
+              <h4>2</h4>
               <ul>
+                <li>신도 데이터의 정확성과 보안성 확보</li>
                 <li>
                   이름, 연락처, 기도·참여 이력 등 신도 정보를 정확하게 관리
                 </li>
@@ -101,28 +107,35 @@
               </ul>
             </div>
             <div class="goal-summary">
-              <span>신도 신뢰를 지키는 안전한 신도 데이터 관리 체계 구축</span>
+              <span><b>goal</b></span>
+              <span
+                >신도 신뢰를 지키는<br class="pc-only" />
+                안전한 신도 데이터 관리 체계 구축</span
+              >
             </div>
           </div>
 
           <div class="goal-item">
             <div class="goal-content">
-              <h4>재정 투명성 및 보고 체계 확립</h4>
+              <h4>3</h4>
               <ul>
+                <li>재정 투명성 및 보고 체계 확립</li>
                 <li>모든 수납·지출 내역을 실시간 집계·분석</li>
                 <li>회계·재무 보고를 클릭 한 번에 생성</li>
                 <li>투명한 재정 운영으로 신도·후원자의 신뢰 확보</li>
               </ul>
             </div>
             <div class="goal-summary">
+              <span><b>goal</b></span>
               <span>재정 운영의 신뢰성과 지속 가능성 강화</span>
             </div>
           </div>
 
           <div class="goal-item">
             <div class="goal-content">
-              <h4>포교와 신도 참여</h4>
+              <h4>4</h4>
               <ul>
+                <li>포교와 신도 참여</li>
                 <li>확대를 위한 행정 지원</li>
                 <li>행사·법회·교육 일정 자동 안내 및 참여 유도</li>
                 <li>맞춤형 문자, 카카오 알림 기능으로 신도와의 접점 강화</li>
@@ -130,24 +143,32 @@
               </ul>
             </div>
             <div class="goal-summary">
+              <span><b>goal</b></span>
               <span
-                >종무 행정이 포교의 발목을 잡는 것이 아니라, 포교를 돕는 역할로
-                전환</span
+                >종무 행정이 포교의 발목을 잡는 것이 아니라,<br
+                  class="pc-only"
+                />
+                포교를 돕는 역할로 전환</span
               >
             </div>
           </div>
 
           <div class="goal-item">
             <div class="goal-content">
-              <h4>변화하는 환경에 적응하는 디지털 역량</h4>
+              <h4>5</h4>
               <ul>
+                <li>변화하는 환경에 적응하는 디지털 역량</li>
                 <li>PC·모바일·클라우드 환경에서 언제 어디서나 업무 가능</li>
                 <li>최신 IT 환경과 보안 규격에 맞춘 시스템 유지</li>
                 <li>종무원의 디지털 활용 능력 향상 교육</li>
               </ul>
             </div>
             <div class="goal-summary">
-              <span>시대 변화에 뒤처지지 않는 '살아있는' 종무소 운영</span>
+              <span><b>goal</b></span>
+              <span
+                >시대 변화에 뒤처지지 않는<br class="pc-only" />
+                '살아있는' 종무소 운영</span
+              >
             </div>
           </div>
         </div>
