feat : 도입효과 section2 mo 영역 작업완료하다

--- a/introduction-effect.html
+++ b/introduction-effect.html
@@ -67,7 +67,7 @@
       </section>
 
       <section class="goals-section">
-        <h3 class="title">Achieve The Goals</h3>
+        <h3 class="title">도입 목표</h3>
 
         <div class="goals-list">
           <div class="goal-item">
@@ -84,7 +84,7 @@
               </ul>
             </div>
             <div class="goal-summary">
-              <span><b>goal</b></span>
+              <span><b>GOAL</b></span>
               <span
                 >행정업무의<br class="pc-only" />
                 '자동화'와 '표준화'</span
@@ -107,7 +107,7 @@
               </ul>
             </div>
             <div class="goal-summary">
-              <span><b>goal</b></span>
+              <span><b>GOAL</b></span>
               <span
                 >신도 신뢰를 지키는<br class="pc-only" />
                 안전한 신도 데이터 관리 체계 구축</span
@@ -126,7 +126,7 @@
               </ul>
             </div>
             <div class="goal-summary">
-              <span><b>goal</b></span>
+              <span><b>GOAL</b></span>
               <span>재정 운영의 신뢰성과 지속 가능성 강화</span>
             </div>
           </div>
@@ -143,7 +143,7 @@
               </ul>
             </div>
             <div class="goal-summary">
-              <span><b>goal</b></span>
+              <span><b>GOAL</b></span>
               <span
                 >종무 행정이 포교의 발목을 잡는 것이 아니라,<br
                   class="pc-only"
@@ -164,7 +164,7 @@
               </ul>
             </div>
             <div class="goal-summary">
-              <span><b>goal</b></span>
+              <span><b>GOAL</b></span>
               <span
                 >시대 변화에 뒤처지지 않는<br class="pc-only" />
                 '살아있는' 종무소 운영</span
