feat : 도입효과 section3 작업 완료하다

--- a/introduction-effect.html
+++ b/introduction-effect.html
@@ -66,6 +66,7 @@
         </div>
       </section>
 
+      <!-- 도입 목표 -->
       <section class="goals-section">
         <h3 class="title">도입 목표</h3>
 
@@ -174,16 +175,25 @@
         </div>
       </section>
 
+      <!-- 첫걸음의 새로운 기회 -->
       <section class="opportunity-section">
+        <h3 class="title">첫걸음의 새로운 기회</h3>
+
         <div class="opportunity-content">
-          <h3>첫걸음의 새로운 기회</h3>
           <p>
-            사찰 행정 업무의 효율성 향상은 단순히 시간을 절약하는 것이 아닙니다.
-            사찰의 미래를 준비하는 것입니다. 이 다섯 가지 목표 - 자동화, 보안성,
-            투명성, 포교 지원, 디지털 적응력 - 를 달성한다면, 종무소는 행정의
-            중심이자 불교 성장의 엔진이 될 수 있습니다. 신도관리프로그램
-            수비라로 이 모든 목표를 한 번의 클릭으로 달성하세요. 오늘부터 사찰의
-            업무 환경을 바꿔보세요.
+            종무소 업무의 효율화는 시간을 아끼는 것이 아니라,<br
+              class="mo-only"
+            />
+            사찰의 미래를 준비하는 것입니다.<br />
+            <b>자동화·보안·투명성·포교 지원·디지털 적응력,</b
+            ><br class="mo-only" />
+            이 다섯 가지 목표를 달성한다면 종무소는 행정의 중심에서,<br />
+            불교의 성장 엔진으로 거듭날 수 있습니다.
+          </p>
+          <p>
+            수비라 신도관리프로그램은 이 모든 목표를<br class="mo-only" />한
+            번의 클릭으로 지원합니다.<br />오늘 바로, 사찰의 업무 환경을 바꾸는
+            ‘첫걸음의 새로운 기회'가 시길 바랍니다.<br />
           </p>
         </div>
       </section>
