--- a/src/header.html
+++ b/src/header.html
@@ -247,7 +247,7 @@
               <li><a href="./brand-story.html">브랜드 스토리</a></li>
               <li><a href="./main-features.html">주요 기능</a></li>
               <li><a href="./introduction-effect.html">도입 효과</a></li>
-              <li><a href="#">바로 비교하기</a></li>
+              <li><a href="./compare-now.html">바로 비교하기</a></li>
               <li><a href="#">보안&amp;안정성</a></li>
             </ul>
           </div>
@@ -308,7 +308,7 @@
                 <li><a href="./brand-story.html">브랜드 스토리</a></li>
                 <li><a href="./main-features.html">주요 기능</a></li>
                 <li><a href="./introduction-effect.html">도입 효과</a></li>
-                <li><a href="#">바로 비교하기</a></li>
+                <li><a href="./compare-now.html">바로 비교하기</a></li>
                 <li><a href="#">보안&amp;안정성</a></li>
               </ul>
             </div>
