feat : 바로 비교 보기 section1 pc 작업완료하다

--- a/compare-now.html
+++ b/compare-now.html
@@ -45,6 +45,195 @@
         바로 비교하기
         <span class="breadcrumb">신도관리 프로그램 수비라 > 바로 비교하기</span>
       </h2>
+
+      <!-- 소개 섹션 -->
+      <section class="intro-section">
+        <div class="intro-content-box">
+          <div class="intro-content">
+            <h3 class="title">
+              신도관리, 이제는 '기록'보다 '운영'의 시대입니다.
+            </h3>
+            <p>
+              수비라는 단순한 데이터 저장을 넘어, 신도와 사찰을 연결하고,
+              종무행정을 공유하며,<br />
+              신뢰를 지켜주는 차세대 클라우드 시스템입니다.
+            </p>
+          </div>
+
+          <!-- 사용자 후기 -->
+          <div class="testimonials-list">
+            <div class="testimonial-item">
+              <div class="testimonial-avatar">
+                <img
+                  src="./img/compare-now/avatar1.png"
+                  alt="사찰 종무원 40대"
+                />
+                <div class="testimonial-avatar-info">
+                  <span class="role">사찰 종무원</span>
+                  <span class="age">40대 00님</span>
+                </div>
+              </div>
+              <div class="testimonial-bubble">
+                <p>
+                  많은 프로그램을 써봤지만, 늘 아쉬움이 남았습니다.<br />
+                  기능은 있는데 연결이 안 되고, 화면은 있는데 직관성이 떨어
+                  집니다.<br />
+                  수비라는 다릅니다. 사찰 업무 흐름에 딱 맞고, 복잡하지 않아
+                  누구든 바로 쓸 수 있죠.
+                </p>
+              </div>
+            </div>
+
+            <div class="testimonial-item">
+              <div class="testimonial-bubble">
+                <p>
+                  ​금xxx도 써봤고, 가xxx도 써봤습니다.<br />
+                  하지만 수비라만큼 ‘종무소의 진짜 일’을 알고 만든 프로그램은
+                  없었습니다.<br />
+                  불필요한 기능보다 꼭 필요한 기능에 집중된 설계가 신뢰를
+                  줍니다.
+                </p>
+              </div>
+              <div class="testimonial-avatar">
+                <img src="./img/compare-now/avatar2.png" alt="사찰 주지스님" />
+                <div class="testimonial-avatar-info">
+                  <span class="role">사찰 주지스님</span>
+                </div>
+              </div>
+            </div>
+
+            <div class="testimonial-item">
+              <div class="testimonial-avatar">
+                <img
+                  src="./img/compare-now/avatar3.png"
+                  alt="사찰 종무원 50대"
+                />
+                <div class="testimonial-avatar-info">
+                  <span class="role">사찰 종무원</span>
+                  <span class="age">50대 00님</span>
+                </div>
+              </div>
+              <div class="testimonial-bubble">
+                <p>
+                  ​가xxx와 달xxx는 기능 위주였다면, 수비라는 사람 중심입니다.<br />
+                  고령자도 바로 쓸 수 있게 화면이 구성되어 있고, 데이터는 자동
+                  백업되어 안심이 됩니다.
+                </p>
+              </div>
+            </div>
+
+            <div class="testimonial-item">
+              <div class="testimonial-bubble">
+                <p>
+                  ​기존 프로그램은 결국 혼자 쓰는 프로그램이었지만, 수비라는
+                  ‘함께 일하는’ 프로그램입니다. <br />동시에 접속해도 무리 없고,
+                  스님·신도·종무원이 각자 맡은 일만 보면 되니사중 운영이 훨씬
+                  원활해졌습니다.
+                </p>
+              </div>
+              <div class="testimonial-avatar">
+                <img src="./img/compare-now/avatar4.png" alt="사찰 주지스님" />
+                <div class="testimonial-avatar-info">
+                  <span class="role">사찰 종무원</span>
+                  <span class="age">60대 00님</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- 비교표 섹션 -->
+      <section class="comparison-section">
+        <h3 class="title">CS 프로그램과 수비라 비교</h3>
+
+        <div class="comparison-description">
+          <p>
+            ·CS 프로그램(PC 설치형 / 예: 가람xx, 금강xx, 달x 등)과 클라우드(PC
+            설치없는 웹접속) 신도관리 프로그램 수비라의 장단점을 비교한
+            표입니다.
+          </p>
+        </div>
+
+        <div class="comparison-table-wrapper">
+          <table class="comparison-table">
+            <thead>
+              <tr>
+                <th class="item-column">항목</th>
+                <th class="cs-column">
+                  CS 프로그램<br />(가람xx, 금강xx, 달x 등)
+                </th>
+                <th class="subira-column">차세대 클라우드 종무행정 수비라</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td class="item-column">설치 여부</td>
+                <td class="cs-column">PC에 직접 설치 필요</td>
+                <td class="subira-column">설치 불필요, 웹 접속만으로 사용</td>
+              </tr>
+              <tr>
+                <td class="item-column">접근성</td>
+                <td class="cs-column">설치된 PC에서만 사용 가능</td>
+                <td class="subira-column">
+                  인터넷만 있으면 어디서든 접속 가능
+                </td>
+              </tr>
+              <tr>
+                <td class="item-column">입력 방식</td>
+                <td class="cs-column">수기 입력 방식</td>
+                <td class="subira-column">자동 입력 방식</td>
+              </tr>
+              <tr>
+                <td class="item-column">유지 관리</td>
+                <td class="cs-column">직접 업데이트 및 수동 백업 필요</td>
+                <td class="subira-column">자동 업데이트 및 백업</td>
+              </tr>
+              <tr>
+                <td class="item-column">데이터 보안</td>
+                <td class="cs-column">백신 설치, PC 보안에 의존</td>
+                <td class="subira-column">웹 방화벽 및 정기 보안 점검</td>
+              </tr>
+              <tr>
+                <td class="item-column">사용자 편의성</td>
+                <td class="cs-column">인터페이스 불편, 교육 필요</td>
+                <td class="subira-column">직관적 UI, 누구나 쉽게 사용</td>
+              </tr>
+              <tr>
+                <td class="item-column">업무 효율성</td>
+                <td class="cs-column">반복 업무, 수기 입력으로 누락 가능</td>
+                <td class="subira-column">
+                  기도비 자동 정산, 통계 자동 생성, 오류 최소화
+                </td>
+              </tr>
+              <tr>
+                <td class="item-column">주요 기능</td>
+                <td class="cs-column">
+                  신도관리, 위패, 영가, 인등, 연등 기도접수, 회계
+                </td>
+                <td class="subira-column">
+                  49재, 해방재, 영가관리, 카드결제(할부포함), 자동이체 연동,
+                  통합 회계관리
+                </td>
+              </tr>
+              <tr>
+                <td class="item-column">협업</td>
+                <td class="cs-column">한 대의 PC에서만 가능</td>
+                <td class="subira-column">
+                  여러 사용자 동시 접속 가능 (장소 무관)
+                </td>
+              </tr>
+              <tr>
+                <td class="item-column">비용</td>
+                <td class="cs-column">초기 설치비 + 유지보수 비용</td>
+                <td class="subira-column">
+                  합리적인 월 관리비, 장기적으로 유리
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </section>
     </main>
 
     <footer id="footer"></footer>
