feat : 바로 비교보기 section1 mo를  추가하다

--- a/compare-now.html
+++ b/compare-now.html
@@ -75,7 +75,8 @@
               </div>
               <div class="testimonial-bubble">
                 <p>
-                  많은 프로그램을 써봤지만, 늘 아쉬움이 남았습니다.<br />
+                  많은 프로그램을 써봤지만<br class="mo-only" />
+                  늘 아쉬움이 남았습니다.<br />
                   기능은 있는데 연결이 안 되고, 화면은 있는데 직관성이 떨어
                   집니다.<br />
                   수비라는 다릅니다. 사찰 업무 흐름에 딱 맞고, 복잡하지 않아
