--- a/compare-now.html
+++ b/compare-now.html
@@ -146,13 +146,13 @@
 
       <!-- 비교표 섹션 -->
       <section class="comparison-section">
-        <h3 class="title">CS 프로그램과 수비라 비교</h3>
+        <h3 class="title blind">CS 프로그램과 수비라 비교</h3>
 
         <div class="comparison-description">
           <p>
-            ·CS 프로그램(PC 설치형 / 예: 가람xx, 금강xx, 달x 등)과 클라우드(PC
-            설치없는 웹접속) 신도관리 프로그램 수비라의 장단점을 비교한
-            표입니다.
+            CS 프로그램(PC 설치형 / 예: 가람xx, 금강xx, 달x 등)과 클라우드(PC
+            설치없는 웹접속) 신도관리 프로그램 수비라의 <br />
+            장단점을 비교한 표입니다.
           </p>
         </div>
 
@@ -164,21 +164,21 @@
                 <th class="cs-column">
                   CS 프로그램<br />(가람xx, 금강xx, 달x 등)
                 </th>
-                <th class="subira-column">차세대 클라우드 종무행정 수비라</th>
+                <th class="subira-column">
+                  차세대 클라우드 <br /><b>종무행정 수비라</b>
+                </th>
               </tr>
             </thead>
             <tbody>
               <tr>
                 <td class="item-column">설치 여부</td>
                 <td class="cs-column">PC에 직접 설치 필요</td>
-                <td class="subira-column">설치 불필요, 웹 접속만으로 사용</td>
+                <td class="subira-column">웹 접속으로 설치 불필요</td>
               </tr>
               <tr>
                 <td class="item-column">접근성</td>
                 <td class="cs-column">설치된 PC에서만 사용 가능</td>
-                <td class="subira-column">
-                  인터넷만 있으면 어디서든 접속 가능
-                </td>
+                <td class="subira-column">인터넷 가능한 모든곳에서 접속</td>
               </tr>
               <tr>
                 <td class="item-column">입력 방식</td>
@@ -193,35 +193,40 @@
               <tr>
                 <td class="item-column">데이터 보안</td>
                 <td class="cs-column">백신 설치, PC 보안에 의존</td>
-                <td class="subira-column">웹 방화벽 및 정기 보안 점검</td>
+                <td class="subira-column">
+                  웹방화벽 및 정기 점검으로 안전 유지
+                </td>
               </tr>
               <tr>
                 <td class="item-column">사용자 편의성</td>
                 <td class="cs-column">인터페이스 불편, 교육 필요</td>
-                <td class="subira-column">직관적 UI, 누구나 쉽게 사용</td>
+                <td class="subira-column">직관적 UI로 누구나 쉽게 사용 가능</td>
               </tr>
               <tr>
                 <td class="item-column">업무 효율성</td>
                 <td class="cs-column">반복 업무, 수기 입력으로 누락 가능</td>
                 <td class="subira-column">
-                  기도비 자동 정산, 통계 자동 생성, 오류 최소화
+                  기도비 자동 정산, 통계 자동 생성,<br />
+                  실수 최소화
                 </td>
               </tr>
               <tr>
                 <td class="item-column">주요 기능</td>
                 <td class="cs-column">
-                  신도관리, 위패, 영가, 인등, 연등 기도접수, 회계
+                  신도관리, 위패, 영가, 인등, 연등<br />
+                  기도접수, 회계
                 </td>
                 <td class="subira-column">
-                  49재, 해방재, 영가관리, 카드결제(할부포함), 자동이체 연동,
-                  통합 회계관리
+                  신도관리, 위패, 49재, 천도재, 인등, 연등,<br />
+                  기도접수, 영가관리, 카드결제(할부포함),<br />
+                  자동이체 통합, 회계관리
                 </td>
               </tr>
               <tr>
                 <td class="item-column">협업</td>
                 <td class="cs-column">한 대의 PC에서만 가능</td>
                 <td class="subira-column">
-                  여러 사용자 동시 접속 가능 (장소 무관)
+                  여러명이 동시에 장소 상관없이 사용
                 </td>
               </tr>
               <tr>
