feat : 바로 비교보기 pc 완료하다

--- a/compare-now.html
+++ b/compare-now.html
@@ -160,80 +160,98 @@
           <table class="comparison-table">
             <thead>
               <tr>
-                <th class="item-column">항목</th>
+                <th class="item-column"><div>항목</div></th>
                 <th class="cs-column">
-                  CS 프로그램<br />(가람xx, 금강xx, 달x 등)
+                  <div>CS 프로그램<br />(가람xx, 금강xx, 달x 등)</div>
                 </th>
                 <th class="subira-column">
-                  차세대 클라우드 <br /><b>종무행정 수비라</b>
+                  <div>차세대 클라우드 <br /><b>종무행정 수비라</b></div>
                 </th>
               </tr>
             </thead>
             <tbody>
               <tr>
-                <td class="item-column">설치 여부</td>
-                <td class="cs-column">PC에 직접 설치 필요</td>
-                <td class="subira-column">웹 접속으로 설치 불필요</td>
-              </tr>
-              <tr>
-                <td class="item-column">접근성</td>
-                <td class="cs-column">설치된 PC에서만 사용 가능</td>
-                <td class="subira-column">인터넷 가능한 모든곳에서 접속</td>
-              </tr>
-              <tr>
-                <td class="item-column">입력 방식</td>
-                <td class="cs-column">수기 입력 방식</td>
-                <td class="subira-column">자동 입력 방식</td>
-              </tr>
-              <tr>
-                <td class="item-column">유지 관리</td>
-                <td class="cs-column">직접 업데이트 및 수동 백업 필요</td>
-                <td class="subira-column">자동 업데이트 및 백업</td>
-              </tr>
-              <tr>
-                <td class="item-column">데이터 보안</td>
-                <td class="cs-column">백신 설치, PC 보안에 의존</td>
+                <td class="item-column"><div>설치 여부</div></td>
+                <td class="cs-column"><div>PC에 직접 설치 필요</div></td>
                 <td class="subira-column">
-                  웹방화벽 및 정기 점검으로 안전 유지
+                  <div>웹 접속으로 설치 불필요</div>
                 </td>
               </tr>
               <tr>
-                <td class="item-column">사용자 편의성</td>
-                <td class="cs-column">인터페이스 불편, 교육 필요</td>
-                <td class="subira-column">직관적 UI로 누구나 쉽게 사용 가능</td>
-              </tr>
-              <tr>
-                <td class="item-column">업무 효율성</td>
-                <td class="cs-column">반복 업무, 수기 입력으로 누락 가능</td>
+                <td class="item-column"><div>접근성</div></td>
+                <td class="cs-column"><div>설치된 PC에서만 사용 가능</div></td>
                 <td class="subira-column">
-                  기도비 자동 정산, 통계 자동 생성,<br />
-                  실수 최소화
+                  <div>인터넷 가능한 모든곳에서 접속</div>
                 </td>
               </tr>
               <tr>
-                <td class="item-column">주요 기능</td>
+                <td class="item-column"><div>입력 방식</div></td>
+                <td class="cs-column"><div>수기 입력 방식</div></td>
+                <td class="subira-column"><div>자동 입력 방식</div></td>
+              </tr>
+              <tr>
+                <td class="item-column"><div>유지 관리</div></td>
                 <td class="cs-column">
-                  신도관리, 위패, 영가, 인등, 연등<br />
-                  기도접수, 회계
+                  <div>직접 업데이트 및 수동 백업 필요</div>
                 </td>
+                <td class="subira-column"><div>자동 업데이트 및 백업</div></td>
+              </tr>
+              <tr>
+                <td class="item-column"><div>데이터 보안</div></td>
+                <td class="cs-column"><div>백신 설치, PC 보안에 의존</div></td>
                 <td class="subira-column">
-                  신도관리, 위패, 49재, 천도재, 인등, 연등,<br />
-                  기도접수, 영가관리, 카드결제(할부포함),<br />
-                  자동이체 통합, 회계관리
+                  <div>웹방화벽 및 정기 점검으로 안전 유지</div>
                 </td>
               </tr>
               <tr>
-                <td class="item-column">협업</td>
-                <td class="cs-column">한 대의 PC에서만 가능</td>
+                <td class="item-column"><div>사용자 편의성</div></td>
+                <td class="cs-column"><div>인터페이스 불편, 교육 필요</div></td>
                 <td class="subira-column">
-                  여러명이 동시에 장소 상관없이 사용
+                  <div>직관적 UI로 누구나 쉽게 사용 가능</div>
                 </td>
               </tr>
               <tr>
-                <td class="item-column">비용</td>
-                <td class="cs-column">초기 설치비 + 유지보수 비용</td>
+                <td class="item-column"><div>업무 효율성</div></td>
+                <td class="cs-column">
+                  <div>반복 업무, 수기 입력으로 누락 가능</div>
+                </td>
                 <td class="subira-column">
-                  합리적인 월 관리비, 장기적으로 유리
+                  <div>
+                    기도비 자동 정산, 통계 자동 생성,<br />
+                    실수 최소화
+                  </div>
+                </td>
+              </tr>
+              <tr>
+                <td class="item-column"><div>주요 기능</div></td>
+                <td class="cs-column">
+                  <div>
+                    신도관리, 위패, 영가, 인등, 연등<br />
+                    기도접수, 회계
+                  </div>
+                </td>
+                <td class="subira-column">
+                  <div>
+                    신도관리, 위패, 49재, 천도재, 인등, 연등,<br />
+                    기도접수, 영가관리, 카드결제(할부포함),<br />
+                    자동이체 통합, 회계관리
+                  </div>
+                </td>
+              </tr>
+              <tr>
+                <td class="item-column"><div>협업</div></td>
+                <td class="cs-column"><div>한 대의 PC에서만 가능</div></td>
+                <td class="subira-column">
+                  <div>여러명이 동시에 장소 상관없이 사용</div>
+                </td>
+              </tr>
+              <tr>
+                <td class="item-column"><div>비용</div></td>
+                <td class="cs-column">
+                  <div>초기 설치비 + 유지보수 비용</div>
+                </td>
+                <td class="subira-column">
+                  <div>합리적인 월 관리비, 장기적으로 유리</div>
                 </td>
               </tr>
             </tbody>
