feat : 바로 비교보기 mo 완료하다

--- a/compare-now.html
+++ b/compare-now.html
@@ -151,7 +151,7 @@
         <div class="comparison-description">
           <p>
             CS 프로그램(PC 설치형 / 예: 가람xx, 금강xx, 달x 등)과 클라우드(PC
-            설치없는 웹접속) 신도관리 프로그램 수비라의 <br />
+            설치없는 웹접속) 신도관리 프로그램 수비라의 <br class="pc-only" />
             장단점을 비교한 표입니다.
           </p>
         </div>
@@ -179,7 +179,9 @@
               </tr>
               <tr>
                 <td class="item-column"><div>접근성</div></td>
-                <td class="cs-column"><div>설치된 PC에서만 사용 가능</div></td>
+                <td class="cs-column">
+                  <div>설치된 PC에서만 사용 가능</div>
+                </td>
                 <td class="subira-column">
                   <div>인터넷 가능한 모든곳에서 접속</div>
                 </td>
@@ -194,18 +196,24 @@
                 <td class="cs-column">
                   <div>직접 업데이트 및 수동 백업 필요</div>
                 </td>
-                <td class="subira-column"><div>자동 업데이트 및 백업</div></td>
+                <td class="subira-column">
+                  <div>자동 업데이트 및 백업</div>
+                </td>
               </tr>
               <tr>
                 <td class="item-column"><div>데이터 보안</div></td>
-                <td class="cs-column"><div>백신 설치, PC 보안에 의존</div></td>
+                <td class="cs-column">
+                  <div>백신 설치, PC 보안에 의존</div>
+                </td>
                 <td class="subira-column">
                   <div>웹방화벽 및 정기 점검으로 안전 유지</div>
                 </td>
               </tr>
               <tr>
                 <td class="item-column"><div>사용자 편의성</div></td>
-                <td class="cs-column"><div>인터페이스 불편, 교육 필요</div></td>
+                <td class="cs-column">
+                  <div>인터페이스 불편, 교육 필요</div>
+                </td>
                 <td class="subira-column">
                   <div>직관적 UI로 누구나 쉽게 사용 가능</div>
                 </td>
