feat : 보안 & 안정성 section1 pc 작업  완료하다

--- a/src/header.html
+++ b/src/header.html
@@ -248,7 +248,7 @@
               <li><a href="./main-features.html">주요 기능</a></li>
               <li><a href="./introduction-effect.html">도입 효과</a></li>
               <li><a href="./compare-now.html">바로 비교하기</a></li>
-              <li><a href="#">보안&amp;안정성</a></li>
+              <li><a href="./security-stability.html">보안&amp;안정성</a></li>
             </ul>
           </div>
         </li>
@@ -309,7 +309,7 @@
                 <li><a href="./main-features.html">주요 기능</a></li>
                 <li><a href="./introduction-effect.html">도입 효과</a></li>
                 <li><a href="./compare-now.html">바로 비교하기</a></li>
-                <li><a href="#">보안&amp;안정성</a></li>
+                <li><a href="./security-stability.html">보안&amp;안정성</a></li>
               </ul>
             </div>
           </li>
