feat: 보안 & 안정성 section1 mo 완료하다

--- a/security-stability.html
+++ b/security-stability.html
@@ -66,7 +66,7 @@
               이 정보는 단순한 연락처 이상의 의미를 지니며, 신도와 사찰 사이의
               <b>신뢰</b> 그 자체이기도 합니다.<br />
               하지만 수기로 관리하거나, 외부 저장 장치 (엑셀파일, 외장하드, USB
-              등)를 사용하는 방식은<br />
+              등)를 사용하는 방식은<br class="pc-only" />
               언제든 유출, 분실, 훼손의 위험이 따릅니다.
             </p>
           </div>
@@ -87,7 +87,7 @@
               <div class="testimonial-bubble">
                 <p>
                   컴퓨터가 고장 나면서 프로그램이 안 켜졌고, 그 안에 있던 신도
-                  자료가 몽땅 날아갔습니다.<br />
+                  자료가 몽땅 날아갔습니다.<br class="pc-only" />
                   백업을 하지 못했던 게 큰 후회로 남아요.
                 </p>
               </div>
@@ -100,8 +100,9 @@
                   데이터를 한순간에 잃었습니다.<br />
                   그때 알게 된 게 바로 수비라였습니다.<br />
                   설치 없이 클라우드로 자동 백업되고, 어디서든 접속 가능하다는
-                  안정성, 자원봉사 신도님들과<br />하나하나 다시 입력하며 1년이
-                  지난 지금, ‘이제야 제대로 된 관리가 되는구나’라는<br />
+                  안정성, 자원봉사 신도님들과<br class="pc-only" />
+                  하나하나 다시 입력하며 1년이 지난 지금, ‘이제야 제대로 된
+                  관리가 되는구나’라는<br class="pc-only" />
                   안도감과 만족감을 느낍니다.
                 </p>
               </div>
