feat : 보안 & 안정성 section2 완료하다

--- a/security-stability.html
+++ b/security-stability.html
@@ -161,17 +161,64 @@
         </div>
       </section>
 
-      <!-- 비교표 섹션 -->
+      <!-- 수비라 주요 보안 기능-->
       <section class="security-section">
         <h3 class="title">수비라 주요 보안 기능</h3>
 
-        <div class="comparison-description">
-          <p>
-            CS 프로그램(PC 설치형 / 예: 가람xx, 금강xx, 달x 등)과 클라우드(PC
-            설치없는 웹접속) 신도관리 프로그램 수비라의 <br class="pc-only" />
-            장단점을 비교한 표입니다.
-          </p>
+        <div class="security-list">
+          <ul>
+            <li>
+              <dl>
+                <dt>국내 보안인증을 받은 클라우드 인프라 사용</dt>
+                <dd>
+                  KISA(한국 인터넷진흥원) 보안 기준에 부합하는 서버를 사용하여,
+                  정보는 한국 내 안전한 데이터 센터에서 보호됩니다.
+                </dd>
+              </dl>
+            </li>
+            <li>
+              <dl>
+                <dt>이중 암호화 + 접근 권한 관리</dt>
+                <dd>
+                  모든 데이터는 저장 전 암호화, 전송 중 암호화가 이중으로
+                  적용됩니다. <br />또한 접속자에 따라 볼 수 있는 기능을
+                  제한하여 실수나 외부 노출을 막습니다.
+                </dd>
+              </dl>
+            </li>
+            <li>
+              <dl>
+                <dt>접속 및 활동 이력 기록</dt>
+                <dd>
+                  누가 언제 무엇을 열람/수정 했는지 모두 기록되어, 문제 발생 시
+                  확인이 가능합니다.
+                </dd>
+              </dl>
+            </li>
+            <li>
+              <dl>
+                <dt>정기 자동 백업</dt>
+                <dd>
+                  시스템 오류나 실수로 인한 데이터 손실에도 대비해 일정 주기마다
+                  데이터를 자동 백업해 복구할 수 있습니다.
+                </dd>
+              </dl>
+            </li>
+          </ul>
         </div>
+
+        <p class="security-description">
+          수비라의 보안 원칙은 단 하나입니다. <br />
+          <b
+            >“ 신도 정보는 곧 사찰의 신뢰이며, 수비라는<br class="mo-only" />
+            그 신뢰를 끝까지 지켜드립니다. ”</b
+          ><br />
+          신도 정보, 더 이상 개인 PC나 USB 저장 장치 또는<br class="mo-only" />
+          엑셀 파일로 두지 마세요.<br />
+          수비라를 통해 보안 + 편의 + 신뢰를 모두 갖춘 신도관리를
+          <br class="mo-only" />
+          시작해 보세요.
+        </p>
       </section>
     </main>
 
