feat : 제작 안내 section1 완료하다

--- a/production-guide.html
+++ b/production-guide.html
@@ -45,6 +45,146 @@
         제작 안내
         <span class="breadcrumb">사찰 홈페이지 제작 > 제작 안내</span>
       </h2>
+
+      <!-- 제작 안내 소개 섹션 -->
+      <section class="intro-section">
+        <div class="intro-content-box">
+          <div class="intro-content">
+            <p>
+              사찰 홈페이지를 제작 하려면 생소하고 낯선 용어와 내용들을 마주하게
+              됩니다.<br />
+              스님, 종무원 분들의 이런 어려움을 해소 하고자 사찰을 잘 아는
+              수비라팀이 직접 홈페이지를 제작 합니다.<br />
+              어려워 마시고 전화 연락 주신다면 친절하게 상세한 내용들을 안내해
+              드리겠습니다.
+            </p>
+            <p class="highlight-text">
+              사찰을 잘 아는 사람들이 만든, 사찰 홈페이지는 다르다는 것을
+              보여드리겠습니다.
+            </p>
+          </div>
+
+          <!-- PDF 다운로드 버튼 -->
+          <div class="download-section">
+            <a href="#" class="download-btn">
+              <img
+                src="./img/production-guide/icon-file.png"
+                alt="PDF 다운로드"
+              />
+              <span
+                >사찰 홈페이지 제작 소개<br class="mo-only" />
+                PDF 다운로드</span
+              >
+            </a>
+          </div>
+        </div>
+      </section>
+
+      <!-- 제작 단계 섹션 -->
+      <section class="steps-section">
+        <h3 class="title">제작 단계</h3>
+
+        <div class="steps-list">
+          <div class="step-item">
+            <div class="step-icon">
+              <img
+                src="./img/production-guide/icon-counsel.png"
+                alt="상담 아이콘"
+              />
+            </div>
+            <div class="step-content">
+              <div class="step-number">01</div>
+              <h4>상담</h4>
+              <p>제작을 원하시는 방향과 예산을 협의 합니다.</p>
+            </div>
+          </div>
+
+          <div class="step-item">
+            <div class="step-icon">
+              <img
+                src="./img/production-guide/icon-file.png"
+                alt="계약 아이콘"
+              />
+            </div>
+            <div class="step-content">
+              <div class="step-number">02</div>
+              <h4>계약</h4>
+              <p>협의된 내용으로 계약서를 작성하고 제작 준비를 합니다.</p>
+            </div>
+          </div>
+
+          <div class="step-item">
+            <div class="step-icon">
+              <img
+                src="./img/production-guide/icon-produce.png"
+                alt="제작 아이콘"
+              />
+            </div>
+            <div class="step-content">
+              <div class="step-number">03</div>
+              <h4>제작</h4>
+              <div class="sub-steps">
+                <div class="sub-step">
+                  <strong>기획</strong>
+                  <span
+                    >원하시는 메뉴나 내용을 정리하여 보여드리고 홈페이지의 전체
+                    내용을 확정 합니다.</span
+                  >
+                </div>
+                <div class="sub-step">
+                  <strong>디자인</strong>
+                  <span
+                    >사찰과 홈페이지 내용과 어울리는 디자인으로 시안을 작업하고
+                    협의 후 본 디자인 작업을 합니다.</span
+                  >
+                </div>
+                <div class="sub-step">
+                  <strong>개발</strong>
+                  <span
+                    >홈페이지 접속 최적화를 위해 반응형 홈페이지 형태로 개발
+                    작업을 합니다.</span
+                  >
+                </div>
+                <div class="sub-step">
+                  <strong>완료</strong>
+                  <span
+                    >홈페이지에 대한 최종 테스트를 완료 한 후 제작을 완료
+                    합니다.</span
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- 제작 기간 및 비용 안내 -->
+        <div class="timeline-note">
+          <p>
+            <span class="asterisk">*</span>
+            일반적인 홈페이지 제작 시 평균 45일의 기간 이내에 홈페이지 제작을
+            완료 합니다.<br />
+            전체 페이지 수나 원하시는 기능에 따라 예산이 다르게 책정되기 때문에
+            자세한 상담은 아래 연락처로 연락 부탁 드립니다.
+          </p>
+        </div>
+      </section>
+
+      <!-- 문의 섹션 -->
+      <section class="inquiry-section">
+        <div class="inquiry-box">
+          <div class="inquiry-header">
+            <img src="./img/icon-mail.png" alt="문의 아이콘" />
+            <h3>홈페이지 제작문의</h3>
+            <img src="./img/icon-right-arrow-brown-24x24.png" alt="바로가기" />
+          </div>
+          <div class="inquiry-content">
+            <p>
+              대표 전화 번호 02-6748-5212 / 수비라 상담 내선 (1)번, 홈페이지
+              제작 내선 (2)번
+            </p>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer id="footer"></footer>
