--- a/src/header.html
+++ b/src/header.html
@@ -267,7 +267,7 @@
           <div class="gnb-sub-menu-area">
             <ul class="gnb-sub-menu">
               <li><a href="#">포트폴리오</a></li>
-              <li><a href="#">제작안내</a></li>
+              <li><a href="./production-guide.html">제작안내</a></li>
             </ul>
           </div>
         </li>
@@ -328,7 +328,7 @@
             <div class="modal-gnb-sub-menu-area">
               <ul class="modal-gnb-sub-menu">
                 <li><a href="#">포트폴리오</a></li>
-                <li><a href="#">제작안내</a></li>
+                <li><a href="./production-guide.html">제작안내</a></li>
               </ul>
             </div>
           </li>
